[workspace]
members = [ 
	"problems/day01", "problems/day02", "problems/day03", "problems/day04", "problems/day05", "problems/day06", "problems/day07",
]

[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["full"] }
day01 = { path = "problems/day01" }
day02 = { path = "problems/day02" }
day03 = { path = "problems/day03" }
day04 = { path = "problems/day04" }
day05 = { path = "problems/day05" }
day06 = { path = "problems/day06" }
day07 = { path = "problems/day07" }
